--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,18 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body>
+    <body class="text-4xl bg-primary text-gray-50 ">
+        <header class="flex justify-center">
+            <nav class="w-64">
+                <button class="dropDown block px-4 py-2 bg-gray-50 text-primary rounded-md">
+                    Button Menu
+                </button>
+                <ul class="w-64 py-2 mt-2 bg-gray-50 text-primary rounded-md shadow-xl hidden">
+                <li><a href="#" class="block px-4 py-2 hover:bg-primary hover:text-gray-50 dropDown">Tableau de bord</a></li>
+                <li><a href="#" class="block px-4 py-2 hover:bg-primary hover:text-gray-50 dropDown" >Menu</a></li>
+                </ul>
+            </nav>
+        </header>
         {% block body %}{% endblock %}
     </body>
 </html>
