--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,17 +14,147 @@
         {% endblock %}
     </head>
     <body class="text-4xl bg-primary text-gray-50 ">
-        <header class="flex justify-center">
-            <nav class="w-64">
-                <button class="dropDown block px-4 py-2 bg-gray-50 text-primary rounded-md">
-                    Button Menu
-                </button>
-                <ul class="w-64 py-2 mt-2 bg-gray-50 text-primary rounded-md shadow-xl hidden">
-                <li><a href="#" class="block px-4 py-2 hover:bg-primary hover:text-gray-50 dropDown">Tableau de bord</a></li>
-                <li><a href="#" class="block px-4 py-2 hover:bg-primary hover:text-gray-50 dropDown" >Menu</a></li>
-                </ul>
+        <header class="">
+            <nav class="flex items-center justify-between flex-wrap bg-gray-50 p-6">
+                <div class="flex items-center flex-shrink-0 text-primary mr-6">
+                    <svg  class="fill-current h-8 w-8 mr-2"xmlns="http://www.w3.org/2000/svg" width="52" height="52" viewBox="0 0 52 52" fill="none">
+                        <g filter="url(#filter0_d_3_2)">
+                        <path d="M15.0625 32.8125H36.9375V35.9375H15.0625V32.8125ZM18.1875 21.875C17.5694 21.875 16.9652 22.0583 16.4513 22.4017C15.9374 22.745 15.5369 23.2331 15.3004 23.8041C15.0639 24.3751 15.002 25.0035 15.1225 25.6097C15.2431 26.2158 15.5408 26.7727 15.9778 27.2097C16.4148 27.6467 16.9717 27.9444 17.5778 28.065C18.184 28.1855 18.8124 28.1236 19.3834 27.8871C19.9544 27.6506 20.4425 27.2501 20.7858 26.7362C21.1292 26.2223 21.3125 25.6181 21.3125 25C21.3167 24.5885 21.2387 24.1802 21.0831 23.7992C20.9276 23.4182 20.6975 23.072 20.4065 22.781C20.1155 22.49 19.7693 22.2599 19.3883 22.1044C19.0073 21.9488 18.599 21.8708 18.1875 21.875ZM33.8125 21.875C33.1944 21.875 32.5902 22.0583 32.0763 22.4017C31.5624 22.745 31.1619 23.2331 30.9254 23.8041C30.6889 24.3751 30.627 25.0035 30.7475 25.6097C30.8681 26.2158 31.1658 26.7727 31.6028 27.2097C32.0398 27.6467 32.5967 27.9444 33.2028 28.065C33.809 28.1855 34.4374 28.1236 35.0084 27.8871C35.5794 27.6506 36.0675 27.2501 36.4108 26.7362C36.7542 26.2223 36.9375 25.6181 36.9375 25C36.9417 24.5885 36.8637 24.1802 36.7081 23.7992C36.5526 23.4182 36.3225 23.072 36.0315 22.781C35.7405 22.49 35.3943 22.2599 35.0133 22.1044C34.6323 21.9488 34.224 21.8708 33.8125 21.875Z" fill="#181818"/>
+                        <path d="M44.75 12.5H29.7719L33.0094 9.2625C33.2712 9.33404 33.5411 9.37185 33.8125 9.375C34.4306 9.375 35.0348 9.19172 35.5487 8.84834C36.0626 8.50496 36.4631 8.01691 36.6996 7.44589C36.9361 6.87487 36.998 6.24653 36.8775 5.64034C36.7569 5.03415 36.4592 4.47733 36.0222 4.04029C35.5852 3.60325 35.0283 3.30563 34.4222 3.18505C33.816 3.06447 33.1876 3.12635 32.6166 3.36288C32.0456 3.5994 31.5575 3.99994 31.2142 4.51384C30.8708 5.02775 30.6875 5.63193 30.6875 6.25C30.6907 6.52141 30.7285 6.7913 30.8 7.05313L25.3531 12.5H7.25C6.42145 12.5008 5.62708 12.8303 5.0412 13.4162C4.45533 14.0021 4.12583 14.7965 4.125 15.625V40.625C4.12583 41.4535 4.45533 42.2479 5.0412 42.8338C5.62708 43.4197 6.42145 43.7492 7.25 43.75H44.75C45.5785 43.7492 46.3729 43.4197 46.9588 42.8338C47.5447 42.2479 47.8742 41.4535 47.875 40.625V15.625C47.8742 14.7965 47.5447 14.0021 46.9588 13.4162C46.3729 12.8303 45.5785 12.5008 44.75 12.5V12.5ZM7.25 40.625V15.625H44.75V40.625H7.25Z" fill="#181818"/>
+                        </g>
+                        <defs>
+                        <filter id="filter0_d_3_2" x="-3" y="0" width="58" height="58" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                        <feOffset dy="4"/>
+                        <feGaussianBlur stdDeviation="2"/>
+                        <feComposite in2="hardAlpha" operator="out"/>
+                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_2"/>
+                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_2" result="shape"/>
+                        </filter>
+                        </defs>
+                    </svg>
+                    <span class="font-semibold text-xl tracking-tight">Dev Blog</span>
+                </div>
+                <div class="block lg:hidden">
+                    <button id="btn-toggle" class="flex items-center px-3 py-2 border rounded text-primary border-primary hover:text-gray-300 hover:border-gray-300">
+                    <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+                    </button>
+                </div>
+                <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+                    <ul id="nav" class="text-sm lg:flex-grow hidden lg:inline-flex">
+                    <li>
+                    <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary hover:text-gray-300 mr-4">
+                        My blog
+                    </a>
+                    </li>
+                    <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary hover:text-gray-300 mr-4">
+                        Category
+                    </a>
+                    <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-primary hover:text-gray-300">
+                        Account
+                    </a>
+                    </div>
+                    <div>
+                    <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-primary border-primary hover:border-transparent hover:text-white hover:bg-primary mt-4 lg:mt-0">Se connecter</a>
+                    </div>
+                </div>
             </nav>
         </header>
+
         {% block body %}{% endblock %}
+
+        <footer class="p-4 bg-gray-50 sm:p-6">
+            <div class="md:flex md:justify-between">
+                <div class="mb-6 md:mb-0">
+                    <a href="#" class="flex items-center">
+                        <svg  class="fill-current h-12 w-12 mr-4"xmlns="http://www.w3.org/2000/svg" width="52" height="52" viewBox="0 0 52 52" fill="none">
+                            <g filter="url(#filter0_d_3_2)">
+                            <path d="M15.0625 32.8125H36.9375V35.9375H15.0625V32.8125ZM18.1875 21.875C17.5694 21.875 16.9652 22.0583 16.4513 22.4017C15.9374 22.745 15.5369 23.2331 15.3004 23.8041C15.0639 24.3751 15.002 25.0035 15.1225 25.6097C15.2431 26.2158 15.5408 26.7727 15.9778 27.2097C16.4148 27.6467 16.9717 27.9444 17.5778 28.065C18.184 28.1855 18.8124 28.1236 19.3834 27.8871C19.9544 27.6506 20.4425 27.2501 20.7858 26.7362C21.1292 26.2223 21.3125 25.6181 21.3125 25C21.3167 24.5885 21.2387 24.1802 21.0831 23.7992C20.9276 23.4182 20.6975 23.072 20.4065 22.781C20.1155 22.49 19.7693 22.2599 19.3883 22.1044C19.0073 21.9488 18.599 21.8708 18.1875 21.875ZM33.8125 21.875C33.1944 21.875 32.5902 22.0583 32.0763 22.4017C31.5624 22.745 31.1619 23.2331 30.9254 23.8041C30.6889 24.3751 30.627 25.0035 30.7475 25.6097C30.8681 26.2158 31.1658 26.7727 31.6028 27.2097C32.0398 27.6467 32.5967 27.9444 33.2028 28.065C33.809 28.1855 34.4374 28.1236 35.0084 27.8871C35.5794 27.6506 36.0675 27.2501 36.4108 26.7362C36.7542 26.2223 36.9375 25.6181 36.9375 25C36.9417 24.5885 36.8637 24.1802 36.7081 23.7992C36.5526 23.4182 36.3225 23.072 36.0315 22.781C35.7405 22.49 35.3943 22.2599 35.0133 22.1044C34.6323 21.9488 34.224 21.8708 33.8125 21.875Z" fill="#181818"/>
+                            <path d="M44.75 12.5H29.7719L33.0094 9.2625C33.2712 9.33404 33.5411 9.37185 33.8125 9.375C34.4306 9.375 35.0348 9.19172 35.5487 8.84834C36.0626 8.50496 36.4631 8.01691 36.6996 7.44589C36.9361 6.87487 36.998 6.24653 36.8775 5.64034C36.7569 5.03415 36.4592 4.47733 36.0222 4.04029C35.5852 3.60325 35.0283 3.30563 34.4222 3.18505C33.816 3.06447 33.1876 3.12635 32.6166 3.36288C32.0456 3.5994 31.5575 3.99994 31.2142 4.51384C30.8708 5.02775 30.6875 5.63193 30.6875 6.25C30.6907 6.52141 30.7285 6.7913 30.8 7.05313L25.3531 12.5H7.25C6.42145 12.5008 5.62708 12.8303 5.0412 13.4162C4.45533 14.0021 4.12583 14.7965 4.125 15.625V40.625C4.12583 41.4535 4.45533 42.2479 5.0412 42.8338C5.62708 43.4197 6.42145 43.7492 7.25 43.75H44.75C45.5785 43.7492 46.3729 43.4197 46.9588 42.8338C47.5447 42.2479 47.8742 41.4535 47.875 40.625V15.625C47.8742 14.7965 47.5447 14.0021 46.9588 13.4162C46.3729 12.8303 45.5785 12.5008 44.75 12.5V12.5ZM7.25 40.625V15.625H44.75V40.625H7.25Z" fill="#181818"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_d_3_2" x="-3" y="0" width="58" height="58" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="4"/>
+                            <feGaussianBlur stdDeviation="2"/>
+                            <feComposite in2="hardAlpha" operator="out"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_2"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_2" result="shape"/>
+                            </filter>
+                            </defs>
+                        </svg>
+                        <span class="self-center text-2xl font-semibold whitespace-nowrap text-primary">Dev Blog</span>
+                    </a>
+                </div>
+                <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+                    <div>
+                        <h2 class="mb-6 text-sm font-semibold text-primary uppercase">Resources</h2>
+                        <ul class="text-gray-600 dark:text-gray-400">
+                            <li>
+                                <a href="https://tailwindcss.com/" class="hover:underline text-xl md:text-2xl">Tailwind CSS</a>
+                            </li>
+                            <li>
+                                <a href="https://symfony.com/" class="hover:underline text-xl md:text-2xl">Symfony</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2 class="mb-6 text-sm font-semibold text-primary uppercase">Follow us</h2>
+                        <ul class="text-gray-600 dark:text-gray-400">
+                            <li class="mb-4">
+                                <a href="https://github.com/LefebvreAnthony" class="hover:underline text-xl md:text-2xl ">Github</a>
+                            </li>
+                            <li class="mb-4">
+                                <a href="https://www.linkedin.com/in/anthony-lefebvre-240177176/" class="hover:underline text-xl md:text-2xl ">LinkedIn</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2 class="mb-6 text-sm font-semibold text-primary uppercase">Legal</h2>
+                        <ul class="text-gray-600 dark:text-gray-400">
+                            <li class="mb-4">
+                                <a href="#" class="hover:underline text-xl md:text-2xl">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#" class="hover:underline text-xl md:text-2xl">Terms &amp; Conditions</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+            <div class="sm:flex sm:items-center sm:justify-between">
+                <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© {{'now' | date("Y") }} <a href="#" class="hover:underline">Dev Blog</a>. All Rights Reserved.
+                </span>
+                <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
+                    <a href="#" class="text-gray-500 hover:text-primary dark:hover:text-primary">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" /></svg>
+                        <span class="sr-only">Facebook page</span>
+                    </a>
+                    <a href="#" class="text-gray-500 hover:text-primary dark:hover:text-primary">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z" clip-rule="evenodd" /></svg>
+                        <span class="sr-only">Instagram page</span>
+                    </a>
+                    <a href="#" class="text-gray-500 hover:text-primary dark:hover:text-primary">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" /></svg>
+                        <span class="sr-only">Twitter page</span>
+                    </a>
+                    <a href="https://github.com/LefebvreAnthony" class="text-gray-500 hover:text-primary dark:hover:text-primary">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" /></svg>
+                        <span class="sr-only">GitHub account</span>
+                    </a>
+                    <a href="https://www.linkedin.com/in/anthony-lefebvre-240177176/" class="text-gray-500 hover:text-primary dark:hover:text-primary">
+                        <svg class="w-5 h-5" fill="currentColor" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill-rule="evenodd">
+                            <path d="M25 1C11.745 1 1 11.745 1 25C1 38.255 11.745 49 25 49C38.255 49 49 38.255 49 25C49 11.745 38.255 1 25 1ZM19.125 34.9475H14.265V19.3075H19.125V34.9475ZM16.665 17.3875C15.13 17.3875 14.1375 16.3 14.1375 14.955C14.1375 13.5825 15.16 12.5275 16.7275 12.5275C18.295 12.5275 19.255 13.5825 19.285 14.955C19.285 16.3 18.295 17.3875 16.665 17.3875ZM36.875 34.9475H32.015V26.28C32.015 24.2625 31.31 22.8925 29.5525 22.8925C28.21 22.8925 27.4125 23.82 27.06 24.7125C26.93 25.03 26.8975 25.48 26.8975 25.9275V34.945H22.035V24.295C22.035 22.3425 21.9725 20.71 21.9075 19.305H26.13L26.3525 21.4775H26.45C27.09 20.4575 28.6575 18.9525 31.28 18.9525C34.4775 18.9525 36.875 21.095 36.875 25.7V34.9475V34.9475Z"/>
+                        </svg>
+                        <span class="sr-only">LinkedIn account</span>
+                    </a>
+                </div>
+            </div>
+    </footer>
     </body>
 </html>
