add userController for page user and page login/logout

--- a/templates/article/item.html.twig
+++ b/templates/article/item.html.twig
@@ -1,6 +1,6 @@
 {% set article_show = path('article_show', { 'slug' : article.slug}) %}
 
-<article class="mb-5">
+<article class="mb-5  text-gray-50 ">
     <div class="grid grid-cols-12">
         <div class="col-span-{{ leftCol ?? 5 }}">
             {% if article.featuredImage %}
