--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %} {{ category.name}} {% endblock %}
 
 {% block body %}
-<main class="">
+<main class=" text-gray-50">
     <div class="">
         <div>
             <h3>{{ category.name }}</h3>
