--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -1,6 +1,6 @@
 {% set username = comment.user.username %}
 
-<div class="comment mb-5" id="comment-{{ comment.id }}">
+<div class="comment mb-5  text-gray-50 " id="comment-{{ comment.id }}">
     <div class="w-full text-left">
         <h5 class="">
             <a href="#">
