--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %} {{article.title}} {% endblock %}
 
 {% block body %}
-    <main class=" px-8">
+    <main class=" px-8  text-gray-50">
         <h1>{{ article.title }}</h1>
         <hr  class="mb-4 mt-4">
 
@@ -13,9 +13,11 @@
             <span class="comment-count">{{ article.comments|length }}</span> comment(s)
         </h2>
         <hr class="mb-4 mt-4">
-        <div class="comment-area mb-5">
-            {{ form(commentForm, { 'attr': { 'class': 'comment-form' } }) }}
-        </div>
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            <div class="comment-area mb-5">
+                {{ form(commentForm, { 'attr': { 'class': 'comment-form' } }) }}
+            </div>
+        {% endif %}
         <div class="comment-list">
             {% for comment in article.comments %}
                 {% include 'comment/index.html.twig' with [comment] %}
