--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-    <main class="p-4">
+    <main class="p-4  text-gray-50 ">
         <div class="grid grid-cols-12 grid-rows-1">
             <div class="col-span-8 lg:col-span-10">
                 <h3 class="italic pb-4 mb-4">New article</h3>
