--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello UserController!{% endblock %}
 
 {% block body %}
-    <main class="w-1/3">
+    <main class="w-1/3 text-gray-50">
         <div>
             <div>
                 <h2>{{ user.username|capitalize}} Profile</h2>
@@ -12,8 +12,8 @@
                 </div>
                 <div>
                     <div>
-                        <span>hello</span>
-                        <input type="text" value="{{ user.username }}" readonly>
+                        <span>@</span>
+                        <input class="text-primary" type="text" value="{{ user.username }}" readonly>
                     </div>
                 </div>
             </div>
