--- a/templates/article/list.html.twig
+++ b/templates/article/list.html.twig
@@ -1,3 +1,11 @@
 {% for article in articles %}
     {% include 'article/item.html.twig' with { articles } %}
 {% endfor %}
+
+<div>
+    <div>
+        <div>
+            {{ knp_pagination_render(articles) }}
+        </div>
+    </div>
+</div>
