--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -71,7 +71,7 @@
                         <ul class="mr-8">
                             {% if is_granted('ROLE_ADMIN') %}
                                 <li>
-                                    <a href="{{ ea_index('MenuCrudController') }}" class="block mt-4 lg:inline-block lg:mt-0 text-primary hover:text-gray-300 mr-4">
+                                    <a href="{{ ea_gen_url('MenuCrudController') }}" class="block mt-4 lg:inline-block lg:mt-0 text-primary hover:text-gray-300 mr-4">
                                         Menus
                                     </a>
                                 </li>
@@ -82,6 +82,13 @@
                                 </a>
                             </li>
                         </ul>
+                        <div>
+                            <a href="#">Add</a>
+                            <ul>
+                                <li><a href="{{ ea_gen_url('ArticleCrudController', 'new') }}">Article</a></li>
+                                <li><a href="{{ ea_gen_url('PageCrudController', 'new') }}">Page</a></li>
+                            </ul>
+                        </div>
                     {% endif %}
                 </div>
                 <div>
