--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -8,7 +8,7 @@
         <div>
             <h3>{{ category.name }}</h3>
             <div id="article-list">
-                {% include "article/list.html.twig" with { articles: category.articles, leftCol: 4, RightCol: 8 } %}
+                {% include "article/list.html.twig" with { articles: articles, leftCol: 4, RightCol: 8 } %}
             </div>
         </div>
     </div>
