--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<main class="my-5 mx-auto flex flex-col w-3/4 md:w-1/4 2xl:w-1/3 text-gray-50">
+<main class="my-5 mx-auto flex flex-col w-3/4 md:w-1/2 lg:w-1/3 2xl:w-1/4 text-gray-50">
     <form method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -17,9 +17,9 @@
 
         <h1 class="text-center mb-5">Sign in</h1>
         <label for="inputUsername" class=>Username</label>
-        <input type="text" value="{{ last_username }}" name="_username" id="inputUsername" class="form-control text-primary p-1" autocomplete="username" required autofocus>
+        <input type="text" value="{{ last_username }}" name="_username" id="inputUsername" class="w-full text-primary p-1" autocomplete="username" required autofocus>
         <label for="inputPassword" class=>Password</label>
-        <input type="password" name="_password" id="inputPassword" class="form-control text-primary p-1" autocomplete="current-password" required>
+        <input type="password" name="_password" id="inputPassword" class="w-full text-primary p-1" autocomplete="current-password" required>
 
         <input type="hidden" name="_csrf_token"
             value="{{ csrf_token('authenticate') }}"
